[gd_scene load_steps=10 format=3 uid="uid://o62inw4r1ln4"]

[ext_resource type="Script" path="res://Scripts/Weapons/bow.gd" id="1_dxwbo"]
[ext_resource type="PackedScene" uid="uid://du8if47y1yxax" path="res://Scenes/Weapons/Bow/arrow.tscn" id="2_84nlv"]
[ext_resource type="Texture2D" uid="uid://dq0t7k5kw0waj" path="res://Assets/Tilemaps/spritesheet_retina.png" id="3_vn2mb"]
[ext_resource type="AudioStream" uid="uid://b8ckelcttjiv5" path="res://Assets/Music/laserShoot.wav" id="4_7ulm5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_srvpx"]
atlas = ExtResource("3_vn2mb")
region = Rect2(1152, 1152, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_aau8f"]
atlas = ExtResource("3_vn2mb")
region = Rect2(1024, 512, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vt6dd"]
atlas = ExtResource("3_vn2mb")
region = Rect2(896, 1280, 128, 128)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4kuec"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w3etm"]
bg_color = Color(1, 0, 0, 1)

[node name="Bow" type="Node2D" groups=["Weapon"]]
script = ExtResource("1_dxwbo")
arrow = ExtResource("2_84nlv")

[node name="Hand1" type="Sprite2D" parent="."]
position = Vector2(68, 23)
texture = SubResource("AtlasTexture_srvpx")

[node name="ArrowVisual" type="Sprite2D" parent="."]
position = Vector2(99, -5)
texture = SubResource("AtlasTexture_aau8f")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(80, -2)
texture = SubResource("AtlasTexture_vt6dd")

[node name="Hand2" type="Sprite2D" parent="."]
position = Vector2(78, -30)
texture = SubResource("AtlasTexture_srvpx")

[node name="ArrowSpawn" type="Node2D" parent="."]
position = Vector2(120, 0)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_7ulm5")
bus = &"SFX"

[node name="ShootingTimer" type="Timer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 108.0
offset_top = -58.0
offset_right = 162.0
offset_bottom = -45.0
theme_override_styles/background = SubResource("StyleBoxFlat_4kuec")
theme_override_styles/fill = SubResource("StyleBoxFlat_w3etm")
max_value = 3.0
show_percentage = false

[connection signal="timeout" from="ShootingTimer" to="." method="_on_shooting_timer_timeout"]
